After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699945 - Root category mustn't be empty
Root category mustn't be empty
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: grilo-mediaserver2
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-05-08 18:03 UTC by Jens Georg
Modified: 2013-05-09 18:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Root category mustn't be empty (848 bytes, patch)
2013-05-08 18:03 UTC, Jens Georg
committed Details | Review

Description Jens Georg 2013-05-08 18:03:00 UTC
With some recent changes in Grilo this does not work anymore and causes aborts
in libdbus with some empty object path because parents can't be set properly.
Comment 1 Jens Georg 2013-05-08 18:03:33 UTC
Created attachment 243608 [details] [review]
Root category mustn't be empty
Comment 2 Juan A. Suarez Romero 2013-05-09 18:54:03 UTC
commit 4bf7e0d30fefca7b599ae338727ee294878a884a
Author: Jens Georg <mail@jensge.org>
Date:   Wed May 8 19:57:57 2013 +0200

    Root category mustn't be empty
    
    With some recent changes in Grilo this does not work anymore and causes aborts
    in libdbus with some empty object path because parents can't be set properly.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699945

 lib/media-server2-common.h |    2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)