Root category mustn't be empty

With some recent changes in Grilo this does not work anymore and causes aborts
in libdbus with some empty object path because parents can't be set properly.

https://bugzilla.gnome.org/show_bug.cgi?id=699945